Improve chunk rendering